kpaas_task/kubernetes/BeatDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-beat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-beat
  template:
    metadata:
      labels:
        app: celery-beat
    spec:
      containers:
      - name: celery-beat
        image: sungmin330/kpaas_task:latest
        command: ["celery", "-A", "config", "beat"]
