kpaas_task/kubernetes/WorkerDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      containers:
      - name: celery-worker
        image: sungmin330/kpaas_task:latest
        command: ["celery", "-A", "config", "worker"]
