kpaas_task/kubernetes/DjangoDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: sungmin330/kpaas_task:latest
        ports:
        - containerPort: 8000
        command: ["python"]
        args: ["manage.py", "runserver", "0.0.0.0:8000", "--settings=config.settings.production"]
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80         # 클러스터 내부에서 사용될 포트
      targetPort: 8000 # 컨테이너가 수신 대기 중인 포트
      nodePort: 30000  # 외부에서 접근할 수 있는 포트 (옵션)
  type: NodePort
